@@ -12,6 +12,11 @@ svn trunk
   that ``paster serve --monitor --daemon`` works (before it would
   constantly restart).
 
+* In Paste Script templates, you can give ``should_echo=False`` in
+  variable definitions, and if the user is queried for the variable
+  then the input will not be echoed (as for a password).  From Dirceu
+  Pereira Tiegs.
+
 1.3.6
 -----
 
